Closed Bug 901131 Opened 11 years ago Closed 11 years ago

GLContext's extension group queries do a static assert on sExtensionGroupInfoArr

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: guillaume.abadie, Assigned: guillaume.abadie)

References

Details

Attachments

(1 file)

      No description provided.
Attachment #785247 - Flags: review?(jgilbert)
Attachment #785247 - Flags: review?(jgilbert) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/2fe371042c60
Target Milestone: --- → mozilla25
https://hg.mozilla.org/mozilla-central/rev/2fe371042c60
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: