Bug 901131 - GLContext's extension group queries do a static assert on sExtensionGroupInfoArr - r=jgilbert